# test_project_poetry

./: .gitignore  pyproject.toml
src/config/: settings.py
