[tool.poetry]
name = "test-project-poetry"
version = "0.1.0"
description = ""
authors = ["Edgar <e.t.harutyunian@gmail.com>"]
readme = "README.md"
packages = [{include = "test_project_poetry"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.2"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
